# esp-idf-libssh

./: .gitmodules  README.md
components/libssh/: CMakeLists.txt
components/libssh/compat/: config.h  poll.h  stubs.h
components/libssh/compat/netinet/: tcp.h
examples/sshd/: CMakeLists.txt  sdkconfig.defaults
examples/sshd/main/: CMakeLists.txt  example.h  main.c  minicli.c  sshd.c  sshd.h  sshd_task.c  wifi.c
